--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>⭐️ Cinemania 📽️</h1>
     <div class="movie-container">
       <label>Pick a movie</label>
       <select id="movie">
-        <options value="10">Avengers: Endgame (10$)</options>
-        <options value="12">Joker(12$)</options>
-        <options value="8">Toy Story (8$)</options>
-        <options value="9">Lion King (9$)</options>
+        <option value="10">Avengers: Endgame (10$)</option>
+        <option value="12">Loki (12$)</option>
+        <option value="8">Toy Story (8$)</option>
+        <option value="9">Lion King (9$)</option>
       </select>
     </div>
 
@@ -33,7 +33,7 @@
       </li>
     </ul>
     <div class="container">
-      <div class="sreen"></div>
+      <div class="screen"></div>
       <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
@@ -96,8 +96,10 @@
       </div>
     </div>
     <p class="text">
-      You have selected <span id="count">0</span> seats for a price of
-      <span id="total"></span>
+      You have selected <span id="count">0</span> seats for a price of $<span
+        id="total"
+        >0</span
+      >
     </p>
     <script src="script.js"></script>
   </body>
