--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div class="movie-container">
       <label>Pick a movie</label>
       <select id="movie">
-        <option value="10">Avengers: Endgame (10$)</option>
-        <option value="12">Loki (12$)</option>
-        <option value="8">Toy Story (8$)</option>
-        <option value="9">Lion King (9$)</option>
+        <option value="11">Stardust ($11)</option>
+        <option value="12">Iron Man ($12)</option>
+        <option value="8">Inception ($8)</option>
+        <option value="9">Shawshank Redemption ($9)</option>
+        <option value="11">Inside Out ($11)</option>
       </select>
     </div>
 
